--- a/src/About.css
+++ b/src/About.css
@@ -3,6 +3,7 @@
     grid-template-columns: 1fr;
     gap: 20px;
     padding: 20px;
+    background-color: rgba(255, 210, 180);
   }
   
   .block {
@@ -14,11 +15,15 @@
   }
   
   .image img {
-    width: 100%;
-    border-radius: 5px;
+    width: 300px;
+    height: 300px;
+    object-fit: cover;
+    display: flex;
+    flex-direction: column;
   }
   
   .text {
     text-align: left;
     font-size: 30px;
+    margin-left: 20px;
   }
